force-app/main/default/objects/Process_Condition__c/Process_Condition__c.object-meta.xml
<CustomObject>
    <label>Process Condition</label>
    <nameField>
        <label>Condition Name</label>
        <displayFormat>COND-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>