force-app/main/default/objects/Process_Condition__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <type>Text</type>
    <length>150</length>
    <required>true</required>
</CustomField>