force-app/main/default/objects/Process_Condition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Equals</fullName><label>Equals</label><default>true</default></value>
            <value><fullName>Not_Equals</fullName><label>Not Equals</label><default>false</default></value>
            <value><fullName>Greater_Than</fullName><label>Greater Than</label><default>false</default></value>
            <value><fullName>Less_Than</fullName><label>Less Than</label><default>false</default></value>
            <value><fullName>Greater_Than_Or_Equal</fullName><label>Greater Than Or Equal</label><default>false</default></value>
            <value><fullName>Less_Than_Or_Equal</fullName><label>Less Than Or Equal</label><default>false</default></value>
            <value><fullName>Contains</fullName><label>Contains</label><default>false</default></value>
            <value><fullName>Not_Contains</fullName><label>Not Contains</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>