force-app/main/default/objects/Process_Condition__c/fields/Process_Definition__c.field-meta.xml
<CustomField>
    <fullName>Process_Definition__c</fullName>
    <label>Process Definition</label>
    <type>MasterDetail</type>
    <referenceTo>Process_Definition__c</referenceTo>
    <relationshipLabel>Process Conditions</relationshipLabel>
    <relationshipName>Process_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>